Fix false claim
Ticket accumulator changes when epoch changes (it is reset), not just
when there is a non-empty tickets extrinsic.

--- a/text/safrole.tex
+++ b/text/safrole.tex
@@ -277,4 +277,4 @@ The maximum size of the ticket accumulator is $\mathsf{E}$. On each block, the a
   \mathbf{n} \subseteq \gamma'_\mathbf{a}
 \end{align}
 
-Note that it can be shown that in the case of an empty extrinsic $\xttickets = []$, as implied by $m' \ge \mathsf{Y}$, then $\gamma'_\mathbf{a} = \gamma_\mathbf{a}$.
+Note that it can be shown that in the case of an empty extrinsic $\xttickets = []$, as implied by $m' \ge \mathsf{Y}$, and unchanged epoch ($e' = e$), then $\gamma'_\mathbf{a} = \gamma_\mathbf{a}$.
