Fix some notation

--- a/text/accounts.tex
+++ b/text/accounts.tex
@@ -93,7 +93,7 @@ The state of the lookup system naturally satisfies a number of invariants. First
 
 \subsubsection{Semantics}
 
-The historical status component $h \in [\N_T]_{:3}$ is a sequence of up to three time slots and the cardinality of this sequence implies one of four modes:
+The historical status component $h \in \seq{\N_T}_{:3}$ is a sequence of up to three time slots and the cardinality of this sequence implies one of four modes:
 \begin{itemize}
   \item{$h = []$}: The preimage is \emph{requested}, but has not yet been supplied.
   \item{$h \in \seq{\N_T}_1$}: The preimage is \emph{available} and has been from time $h_0$.
