fix missing mathbf

--- a/text/pvm.tex
+++ b/text/pvm.tex
@@ -634,7 +634,7 @@ If the above cannot be satisfied, then $x = \none$, otherwise $x = (\mathbf{c}, 
     &(\mathbf{w}_{i - (2\mathsf{Z}_Q + \rnq{|\mathbf{o}|})}, W) &&\ \when
         2\mathsf{Z}_Q + \rnq{|\mathbf{o}|}
             &\ \leq i < \ &&
-                2\mathsf{Z}_Q + \rnq{|\mathbf{o}|} + |w|\\
+                2\mathsf{Z}_Q + \rnq{|\mathbf{o}|} + |\mathbf{w}|\\
     &(0, W) &&\ \when
         2\mathsf{Z}_Q + \rnq{|\mathbf{o}|} + |\mathbf{w}|
             &\ \leq i < \ &&
