--- a/text/work_packages_and_reports.tex
+++ b/text/work_packages_and_reports.tex
@@ -121,7 +121,7 @@ We define the work-package's implied authorizer as $\mathbf{p}_a$, the hash of t
 ($\Lambda$ is the historical lookup function defined in equation \ref{eq:historicallookup}.)
 
 \subsubsection{Exporting}
-Any of a work-package's work-items may \emph{export} segments and a \emph{segments-root} is placed in the work-report committing to these, ordered according to the work-item which is exporting. It is formed as the root of a constant-depth binary Merkle tree as defined in equation \ref{eq:constantdepthmerkleroot}:
+Any of a work-package's work-items may \emph{export} segments and a \emph{segments-root} is placed in the work-report committing to these, ordered according to the work-item which is exporting. It is formed as the root of a constant-depth binary Merkle tree as defined in equation \ref{eq:constantdepthmerkleroot}.
 
 Guarantors are required to erasure-code and distribute two data sets: one blob, the auditable work-package containing the encoded work-package, extrinsic data and self-justifying imported segments which is placed in the short-term Audit DA store and a second set of exported-segments data together with the \emph{Paged-Proofs} metadata. Items in the first store are short-lived; assurers are expected to keep them only until finality of the block which included the work-result. Items in the second, meanwhile, are long-lived and expected to be kept for a minimum of 28 days (672 complete epochs) following the reporting of the work-report.
 
@@ -251,7 +251,7 @@ The functions $\mathcal{M}$ and $\mathcal{M}_B$ are the fixed-depth and simple b
 
 And $\mathcal{P}$ is the zero-padding function to take an octet array to some multiple of $n$ in length:
 \begin{equation}\label{eq:zeropadding}
-  \mathcal{P}_{n \in \N_{1:}}\colon\left\{\begin{aligned}
+  \mathcal{P}_{n \in \N_{1\dots}}\colon\left\{\begin{aligned}
     \Y &\to \Y_{k\cdot n}\\
     \mathbf{x} &\mapsto \mathbf{x} \concat [0, 0, ...]_{((|x|+n - 1) \bmod n) + 1 \dots n}
   \end{aligned}\right.
