--- a/text/merklization.tex
+++ b/text/merklization.tex
@@ -167,7 +167,7 @@ We define the constant-depth binary Merkle function as $\mathcal{M}$ and the cor
   \end{aligned}\right.\\
   \mathcal{J}_x&\colon \left\{\begin{aligned}\label{eq:constantdepthsubtreemerklejust}
     (\seq{\Y}, \N_{|\mathbf{v}|}, \Y \to \H) &\to \seq{\H}\\
-    (\mathbf{v}, i, H) &\mapsto T(C(\mathbf{v}, H), i, H)_{\dots\max(0, \ceil{\log_2(|\mathbf{v}|) - x})}
+    (\mathbf{v}, i, H) &\mapsto T(C(\mathbf{v}, H), i, H)_{\dots\max(0, \ceil{\log_2(\max(1, |\mathbf{v}|)) - x})}
   \end{aligned}\right.
 \end{align}
 
