--- a/text/pvm.tex
+++ b/text/pvm.tex
@@ -676,9 +676,9 @@ The four instances where the \textsc{pvm} is utilized each expect to be able to 
     \end{cases}
   \end{aligned}\right.\\
   \where R&\colon (\varepsilon, \imath', \xi', \omega', \mem', \mathbf{x}) \mapsto \begin{cases}
-    (\varepsilon, \mathbf{x}) &\when \varepsilon = \oog \\
-    (\xi', \mu'_{\omega'_{10}\dots+\omega'_{11}}) &\when \varepsilon = \halt \wedge \mathbb{Z}_{\omega'_{10}\dots+\omega'_{11}} \subset \mathbb{V}_{\mem'} \\
-    (\xi', []) &\when \varepsilon = \halt \wedge \mathbb{Z}_{\omega'_{10}\dots+\omega'_{11}} \not\subset \mathbb{V}_{\mem'} \\
+    (\oog, \mathbf{x}) &\when \varepsilon = \oog \\
+    ((\xi', \mu'_{\omega'_{10}\dots+\omega'_{11}}), \mathbf{x}) &\when \varepsilon = \halt \wedge \mathbb{Z}_{\omega'_{10}\dots+\omega'_{11}} \subset \mathbb{V}_{\mem'} \\
+    ((\xi', []), \mathbf{x}) &\when \varepsilon = \halt \wedge \mathbb{Z}_{\omega'_{10}\dots+\omega'_{11}} \not\subset \mathbb{V}_{\mem'} \\
     (\panic, \mathbf{x}) &\otherwise \\
   \end{cases}
 \end{align}
