--- a/text/work_packages_and_reports.tex
+++ b/text/work_packages_and_reports.tex
@@ -204,9 +204,9 @@ We may then define $s$ as the data availability specification of the package usi
 \begin{equation}
   \begin{aligned}
     s &= \newavailabilityspecifier(\mathcal{H}(\mathbf{p}), \se(\mathbf{p}, \mathbf{x}, \mathbf{i}, \mathbf{j}), \wideparen{\overline{\mathbf{e}}}) \\
-    \nonumber \where \mathbf{x} &= [\extrinsicdata(w) \mid w \orderedin \mathbf{p}_\wp¬workitems]\\
-    \nonumber \also \mathbf{i} &= [\importsegmentdata(w) \mid w \orderedin \mathbf{p}_\wp¬workitems]\\
-    \nonumber \also \mathbf{j} &= [\var{\mathcal{J}(\mathbf{s}, n)} \mid (\mathcal{M}(\mathbf{s}), n) \orderedin w_\wi¬importsegments, w \orderedin \mathbf{p}_\wp¬workitems]
+    \where \mathbf{x} &= [\extrinsicdata(w) \mid w \orderedin \mathbf{p}_\wp¬workitems]\\
+    \also \mathbf{i} &= [\importsegmentdata(w) \mid w \orderedin \mathbf{p}_\wp¬workitems]\\
+    \also \mathbf{j} &= [\var{\mathcal{J}(\mathbf{s}, n)} \mid (\mathcal{M}(\mathbf{s}), n) \orderedin w_\wi¬importsegments, w \orderedin \mathbf{p}_\wp¬workitems]
   \end{aligned}
 \end{equation}
 
