Use modern FS shuffle

--- a/text/utilities.tex
+++ b/text/utilities.tex
@@ -5,7 +5,7 @@ The Fisher-Yates shuffle function is defined formally as:
   \forall T, l \in \N: \mathcal{F}\colon\left\{\begin{aligned}
     (\seq{T}_l, \seq{\N}_{l:}) &\to \seq{T}_l\\
     (\mathbf{s}, \mathbf{r}) &\mapsto \begin{cases}
-      [\mathbf{s}_{\mathbf{r}_0 \bmod l}] \frown \mathcal{F}([\mathbf{s}_i\mid i \orderedin \N_l \setminus \{\mathbf{r}_0 \bmod l\}], [\mathbf{r}_1, \mathbf{r}_2, \dots]) &\when \mathbf{s} \ne []\\
+      [\mathbf{s}_{\mathbf{r}_0 \bmod l}] \frown \mathcal{F}(\mathbf{s}'_{\dots l-1}, \mathbf{r}_{1\dots})\ \where \mathbf{s}' = \mathbf{s} \exc \mathbf{s'}_{\mathbf{r}_0 \bmod l} = \mathbf{s}_{l - 1} &\when \mathbf{s} \ne []\\
       [] &\otherwise
     \end{cases}
   \end{aligned}\right.
