Avoid confusion over Work Package's code/codehash

--- a/preamble.tex
+++ b/preamble.tex
@@ -149,6 +149,20 @@
 \newcommand*{\xtassurances}{\mathbf{E}_A}
 \newcommand*{\xtpreimages}{\mathbf{E}_P}
 
+\newcommand*{\wp¬authtoken}{\mathbf{j}}
+\newcommand*{\wp¬authcodehost}{h}
+\newcommand*{\wp¬authcodehash}{u}
+\newcommand*{\wp¬authparam}{\mathbf{p}}
+\newcommand*{\wp¬context}{\mathbf{x}} % Consider rename to \mathbf{c}
+\newcommand*{\wp¬workitems}{\mathbf{w}}
+
+\newcommand*{\wp¬authorizer}{a}
+\newcommand*{\wp¬authcode}{\mathbf{c}}
+
+\newcommand*{\wi¬importsegments}{\mathbf{i}}
+\newcommand*{\wi¬extrinsics}{\mathbf{x}}
+\newcommand*{\wi¬exportsegments}{e}
+
 \newcommand*{\jamdraftversion}{\input{VERSION}\!\!\!}
 \newcommand*{\jamdraftversionstring}{\jamdraftversion}
 
