--- a/text/accumulation.tex
+++ b/text/accumulation.tex
@@ -88,7 +88,7 @@ We may then define $A$, the mapping from the index of accumulated services to th
         \isa{\mathbf{n}}{\dict{\N_S}{\mathbb{A}}}\ts\\
         \isa{p&}{\ltuple\isa{m}{\N_S}\ts\isa{a}{\N_S}\ts\isa{v}{\N_S}\rtuple}\\
       \end{aligned}\rtuple \\
-      s &\mapsto \Psi_A(\delta^\dagger, s, M(s), G(s))
+      s &\mapsto \Psi_A(\delta^\dagger, s, G(s), M(s))
     \end{aligned}\right.
 \end{align}
 
