PVM Invoctions: Fix Accumulate

--- a/text/pvm_invocations.tex
+++ b/text/pvm_invocations.tex
@@ -132,8 +132,16 @@ We define $\Psi_A$, the Accumulation invocation function as:
     &\to
     \mathbf{X} \times \tuple{\isa{r}{\H?}}\\
     (\delta^\dagger, s, g, \mathbf{o}) &\mapsto \begin{cases}
-      \delta^\dagger[s] &\when \delta^\dagger[s]_\mathbf{c} = \none \vee \mathbf{o} = [] \\
-      C(\Psi_M(\delta^\dagger[s]_\mathbf{c}, 10, g, \mathcal{E}(\mathbf{o}), F, I(\delta^\dagger[s], s))) &\otherwise
+      \tup{
+        \is{\mathbf{s}}{\delta^\dagger[s]} \ts
+        \is{\mathbf{t}}{[]} \ts
+        \is{p}{\chi} \ts
+        \is{\mathbf{c}}{\varphi} \ts
+        \is{\mathbf{v}}{\iota} \ts
+        \is{\mathbf{n}}{\emptyset} \ts
+        \is{r}{\none}
+      } &\when \delta^\dagger[s]_\mathbf{c} = \none \\
+      C(\Psi_M(\delta^\dagger[s]_\mathbf{c}, 10, g, \mathcal{E}(\var{\mathbf{o}}), F, I(\delta^\dagger[s], s))) &\otherwise
     \end{cases} \\
   \end{cases}
 \end{align}
