Misc corrections on 0.3.6 (#72)
* alpha' dependent on header

* Validator index in assurance extrinsic is encoded as 2 bytes

* Avoid taking log of zero

* Decode the right amount of data

* Fix up function R in PVM Argument Invocation Definition

* Entry points are 0, 5, 10, 15

* Fix Refine lookup case arm

* Numbering.

* Use modern FS shuffle

* Avoid confusion over Work Package's code/codehash

* Invocation: Fix argument order

* PVM Invoctions: Fix Accumulate

--- a/text/overview.tex
+++ b/text/overview.tex
@@ -65,7 +65,7 @@ Much as in the \emph{YP}, we specify $\Upsilon$ as the implication of formulatin
     \varphi' \\
     \mathbf{C}
   \end{rcases*} &\prec (\xtassurances, \rho', \delta^\dagger, \chi, \iota, \varphi) \\
-  \alpha' &\prec (\xtguarantees, \varphi', \alpha) \\
+  \alpha' &\prec (\mathbf{H}, \xtguarantees, \varphi', \alpha) \\
   \pi' &\prec (\xtguarantees, \xtpreimages, \xtassurances, \xttickets, \tau, \kappa', \pi, \mathbf{H})
 \end{align}
 
