Privileges: Free accumulation + gas services

--- a/preamble.tex
+++ b/preamble.tex
@@ -102,6 +102,7 @@
 \newcommand*{\halt}{\blacksquare}
 \newcommand*{\fault}{\text{\raisebox{6pt}{\rotatebox{180}{\textsf{F}}}}}
 \newcommand*{\none}{\emptyset}
+\newcommand*{\subifnone}{\mathcal{U}}
 \newcommand*{\disjoint}{\downspoon}
 \newcommand*{\Jam}{\raisebox{-1.2pt}{J}\textsc{am}\@\xspace}
 \newcommand*{\suchthat}{\text{ such that }}
