--- a/text/accumulation.tex
+++ b/text/accumulation.tex
@@ -86,7 +86,7 @@ We may then define $A$, the mapping from the index of accumulated services to th
         \isa{r}{\H\bm{?}}\ts\\
         \isa{\mathbf{c}&}{\lseq\lseq\H\rseq_\mathsf{Q}\rseq_\mathsf{C}}\ts\qquad
         \isa{\mathbf{n}}{\dict{\N_S}{\mathbb{A}}}\ts\\
-        \isa{p&}{\ltuple\isa{m}{\N_S}\ts\isa{a}{\N_S}\ts\isa{v}{\N_S}\rtuple}\\
+        \isa{p&}{\tuple{\isa{m}{\N_S}, \isa{a}{\N_S}, \isa{v}{\N_S}, \isa{\mathbf{g}}{\dict{\N_S}{\N_G}}}}\\
       \end{aligned}\rtuple \\
       s &\mapsto \Psi_A(\delta^\dagger, s, G(s) + \subifnone((\chi_\mathbf{g})_s, 0), M(s))
     \end{aligned}\right.
