Fix discrepency between Phi and Phi_1

--- a/text/pvm.tex
+++ b/text/pvm.tex
@@ -121,8 +121,8 @@ We denote this set, as opcode indices rather than names, as $T$. We define the i
 We must now define the single-step \textsc{pvm} state-transition function $\Psi_1$:
 \begin{equation}
   \Psi_1\colon \left\{\begin{aligned}
-    (\Y, \seq{\N_R}, \N_R, \N_G, \regs, \ram) &\to (\{\panic, \halt, \continue \} \cup \{\fault, \host\} \times \N_R, \Z_G, \regs, \ram)\\
-    (\mathbf{c}, \mathbf{j}, \imath, \xi, \omega, \mem) &\mapsto (\varepsilon, \imath', \xi', \omega', \mem')
+    (\Y, \mathbb{B}, \seq{\N_R}, \N_R, \N_G, \regs, \ram) &\to (\{\panic, \halt, \continue \} \cup \{\fault, \host\} \times \N_R, \Z_G, \regs, \ram)\\
+    (\mathbf{c}, \mathbf{k}, \mathbf{j}, \imath, \xi, \omega, \mem) &\mapsto (\varepsilon, \imath', \xi', \omega', \mem')
   \end{aligned}\right.
 \end{equation}
 
