--- a/text/bandersnatch.tex
+++ b/text/bandersnatch.tex
@@ -17,4 +17,4 @@ The singly-contextualized Bandersnatch Ring\textsc{vrf} proofs $\bandersnatch{r}
   \banderout{p \in \bandersnatch{r}{c}{m}} \in \H &\equiv \text{hashed\_output}(\text{decode}(x_{\dots32}) \mid x \in \bandersnatch{r}{c}{m})
 \end{align}
 
-Note that in the case a key $\H_B$ has no corresponding Bandersnatch point, then it is disregarded from the commitment $\mathcal{O}(\seq{\H_B})$.
+Note that in the case a key $\H_B$ has no corresponding Bandersnatch point when constructing the ring, then the Bandersnatch \emph{padding point} should be substituted.
